Update dependencies, plugins and read-me
Due to AspectJ 1.9.21, JDK17+ is necessary for the build now. During
runtime, still Java 8 is enough.